# BZL-Database

binance-websocket/: BTCUSDT_2017-08-16_2025-01-05.csv  BTCUSDT_2025-01-01_2025-01-06.csv  Cargo.toml  get_cryptodata.py
binance-websocket/data/BTCUSDT/: 2025-01-06.csv
binance-websocket/src/: clickhouse_connect.rs  get_cryptodata.rs  get_spot_1d_data.rs  get_spot_marker_data.rs  get_spot_pairs_info.rs  lib.rs  main.rs  renew_cryptodata.rs
